# base

./: CMakeLists.txt  CMakePresets.json  main.cpp  project.cmake
exe/: main.cpp
include/base/: Console.cpp  Console.h  Convert.h  Counter.h  DateTime.cpp  DateTime.h  Delegate.h  Event.h  ExitGuard.cpp  ExitGuard.h  FactoryManager.h  GlobalObjectProvider.cpp  GlobalObjectProvider.h  Guard.cpp  Guard.h  HandleWrapper.h  IDisposable.cpp  IDisposable.h  IEvent.h  IExecutable.cpp  IExecutable.h  IIdToken.cpp  IIdToken.h  IUnsubscribeToken.h  Initializer.cpp  Initializer.h  LockGuard.cpp  LockGuard.h  Malloc.cpp  Malloc.h  MasterSlaveFlipFlop.h  MutexHandleWrapper.h  Placement.cpp  Placement.h  RentedPtrFactory.cpp  RentedPtrFactory.h  SingletonGetter.cpp  SingletonGetter.h  SingletonProvider.cpp  SingletonProvider.h  (+19 more)
include/base/bit/: AutoBitConverter.cpp  AutoBitConverter.h  Bit.h  BitConverter.cpp  BitConverter.h  DoubleBitView.cpp  DoubleBitView.h  FloatBitView.cpp  FloatBitView.h  FloatValueType.cpp  FloatValueType.h  IStreamDeserializable.h  IStreamSerializable.h  SoftDouble.h  StdStringStreamSerializer.cpp  StdStringStreamSerializer.h  bit.cpp  bit.h  bit_converte.cpp  bit_converte.h
include/base/container/: Array.cpp  Array.h  ArraySpan.cpp  ArraySpan.h  BlockingQueue.cpp  BlockingQueue.h  ChunkedList.cpp  ChunkedList.h  CircleDQueue.cpp  CircleDQueue.h  CircleDeque.cpp  CircleDeque.h  Collection.h  DataCache.cpp  DataCache.h  Dictionary.cpp  Dictionary.h  HysteresisBlockingQueue.cpp  HysteresisBlockingQueue.h  ICollection.cpp  ICollection.h  IDQueue.cpp  IDQueue.h  IDeque.cpp  IDeque.h  IDictionary.cpp  IDictionary.h  IEnumerable.cpp  IEnumerable.h  IEnumerator.cpp  (+46 more)
private_src/: FileStream.cpp  FileStream.h  IdToken.cpp  IdToken.h  pch.h
private_src/task/: BinarySemaphore.cpp  BinarySemaphore.h  DisposableSemaphore.cpp  DisposableSemaphore.h  Semaphore.h  StdMutex.cpp  StdMutex.h
test/: main.cpp
(+1113 files in other folders)
